<resources>
    <string name="app_name">Breaking</string>
    <string name="sign_up_add_profile_text">프로필 추가</string>
    <string name="sign_up_nickname_text">닉네임</string>
    <string name="sign_up_phone_number_text">전화번호</string>
    <string name="sign_up_state_message_title">상태 메시지(선택)</string>
    <string name="sign_up_state_message_hint">상태 메시지(최대 60자)</string>
    <string name="sign_up_user_type_title">회원 유형</string>
    <string name="sign_up_user_type_default_btn">일반인</string>
    <string name="sign_up_user_type_other_btn">언론인</string>
    <string name="sign_up_email_title">이메일</string>
    <string name="sign_up">회원가입</string>
    <string name="sign_up_name">이름</string>
    <string name="sign_up_none_name">이름을 입력해주세요.</string>
    <string name="sign_up_none_nickname_text">닉네임을 입력해주세요.</string>
    <string name="sign_up_none_phone_number_text">전화번호를 입력해주세요.</string>
    <string name="sign_up_none_email_text">이메일을 입력해주세요.</string>
    <string name="splash_text">모두가 기자가 된다</string>
    <string name="sign_in_text_title">Breaking을 통해 지금 바로 제보하세요.</string>
    <string name="sign_in_btn_kakao">카카오톡으로 로그인하기</string>
    <string name="sign_in_btn_google">구글로 로그인하기</string>
    <string name="bottom_menu_breaking_chart">차트</string>
    <string name="bottom_menu_breaking_mission">미션</string>
    <string name="bottom_menu_breaking_home">홈</string>
    <string name="bottom_menu_breaking_chat">채팅</string>
    <string name="bottom_menu_breaking_user">유저</string>
    <string name="drawer_menu_breaking_point">포인트</string>
    <string name="drawer_menu_breaking_bookmark">북마크</string>
    <string name="drawer_menu_breaking_cart">구매한 제보</string>
    <string name="drawer_menu_breaking_profile">프로필 편집</string>
    <string name="drawer_menu_breaking_setting">설정</string>
    <string name="edit_profile">프로필 편집</string>
    <string name="nickname">닉네임</string>
    <string name="status_msg">상태 메세지</string>
    <string name="follow">팔로우</string>
    <string name="follower">팔로워</string>
    <string name="written_post">작성 제보</string>
    <string name="setting_menu">설정</string>
    <string name="post_home_btn">제보하기</string>
    <string name="post_register_image_video">사진/동영상 업로드</string>
    <string name="post_register_event_time">제보 발생 시간</string>
    <string name="post_register_location">위치</string>
    <string name="post_register_click_location">제보 위치 찾기</string>
    <string name="post_register_type">제보방식</string>
    <string name="post_register_type_exclusive">단독제보</string>
    <string name="post_register_type_charged">유료제보</string>
    <string name="post_register_type_free">무료제보</string>
    <string name="post_register_price">제보가격</string>
    <string name="post_register_title">제보 내용</string>
    <string name="post_register_content_title">제목을 입력해주세요.</string>
    <string name="post_register_content_description">상황을 최대한 상세하게 기록해주세요.\n\n(상황, 시간, 사건 전개 과정, 경과상태 등)\n\n최대 2000자</string>
    <string name="post_register_content_hashtag"># 해시태그를 입력하세요. (최대 8개)</string>
    <string name="post_register_price_input">가격을 입력해주세요. (원)</string>
    <string name="post_register_profile_type">프로필 공개 여부</string>
    <string name="post_register_profile_type_public">공개</string>
    <string name="post_register_profile_type_secret">비공개</string>
    <string name="post_register_btn">제보하기</string>
    <string name="post_edit_btn">수정하기</string>
    <string name="follow_remove">삭제</string>
    <string name="is_selling_string">판매중</string>
    <string name="exclusive_string">단독</string>
    <string name="sold_string">판매완료</string>
    <string name="sold_stop_string">판매중지</string>
    <string name="sold_hidden_string">숨김</string>
    <string name="vertical_divider_string">|</string>
    <string name="dot_divider">·</string>
    <string name="filter">필터</string>
    <string name="latest_order">최신순</string>
    <string name="search_hint_text"> 제보 또는 유저를 검색하세요.</string>
    <string name="post_detail_tool_bar">제보글</string>
    <string name="post_detail_btn_purchase">구매하기</string>
    <string name="post_detail_btn_sold">구매완료</string>
    <string name="post_detail_btn_consumer_list">구매자목록</string>
    <string name="post_detail_add_comment_hint">댓글 추가</string>
    <string name="post_detail_add_comment">등록</string>
    <string name="post_detail_tool_bar_modify">수정</string>
    <string name="post_detail_comment_default">작성된 댓글이 없습니다.</string>
    <string name="order_latest">최신순</string>
    <string name="order_like">좋아요순</string>
    <string name="order_view">조회수순</string>
    <string name="do_apply">적용</string>
    <string name="sort_option_title">정렬 옵션</string>
    <string name="reset">초기화</string>
    <string name="entire">전체</string>
    <string name="unsold_feed">미판매된 제보만</string>
    <string name="sold_feed">판매된 제보만</string>
    <string name="filter_option_title">필터 옵션</string>
    <string name="start_date">시작 날짜</string>
    <string name="end_date">종료 날짜</string>
    <string name="sell_feed">· 판매 제보</string>
    <string name="date_range">· 기간</string>
    <string name="for_last_min">· 최근 N분</string>
    <string name="latest_time">최근 시간 (분)</string>
    <string name="hyphen">-</string>
    <string name="no_feed_text">피드가 없습니다.</string>
    <string name="unsold_option">· 미판매</string>
    <string name="sold_option">· 판매완료</string>
    <string name="entire_option">· 전체</string>
    <string name="no_purchased">구매한 제보가 없습니다.</string>
    <string name="no_written">작성한 제보가 없습니다.</string>
    <string name="no_bookmarked">북마크한 제보가 없습니다.</string>
    <string name="search">검색</string>
    <string name="hashtag_alert">해시태그 검색 시 맨 앞에 #을 붙여주세요. ex) #해시태그</string>
    <string name="user_alert">유저 검색 시 맨 앞에 @을 붙여주세요. ex) @홍길동</string>
    <string name="no_search_result">검색결과 없음</string>
    <string name="no_transaction_list">입출금 내역이 없습니다.</string>
    <string name="transaction">거래</string>
    <string name="balance">보유 금액</string>
    <string name="log_out">로그아웃</string>
    <string name="account">계정</string>
    <string name="amount_charge">충전 금액</string>
    <string name="hint_charge">충전 금액을 입력하세요.</string>
    <string name="won">원</string>
    <string name="do_charge">충전하기</string>
    <string name="do_withdraw">출금하기</string>
    <string name="hint_withdraw">출금할 금액을 입력하세요.</string>
    <string name="withdraw_amount">출금 금액</string>
</resources>