<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/custom_dialog_background"
    android:orientation="vertical"
    android:padding="8dp">

    <Button
        android:id="@+id/btn_sort_apply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/theme_color_round_button"
        android:text="@string/do_apply"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group_sort_option"
        app:layout_constraintVertical_bias="0.01" />

    <ImageButton
        android:id="@+id/btn_back_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_baseline_clear_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group_sort_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back_clear">

        <RadioButton
            android:id="@+id/radio_btn_sort_latest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:buttonTint="@color/breaking_color"
            android:padding="12dp"
            android:text="@string/order_latest" />

        <RadioButton
            android:id="@+id/radio_btn_sort_like"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:buttonTint="@color/breaking_color"
            android:padding="12dp"
            android:text="@string/order_like" />

        <RadioButton
            android:id="@+id/radio_btn_sort_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:buttonTint="@color/breaking_color"
            android:padding="12dp"
            android:text="@string/order_view" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_sort_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sort_option_title"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btn_back_clear"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_back_clear" />
</androidx.constraintlayout.widget.ConstraintLayout>