<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="9dp">

    <Button
        android:id="@+id/btn_filter_reset"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/theme_color_round_button"
        android:text="@string/reset"
        android:textColor="@color/breaking_bottom_clicked_color"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_filter_latest_min"
        app:layout_constraintWidth_percent="0.38" />

    <Button
        android:id="@+id/btn_filter_apply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/theme_color_round_button"
        android:text="@string/do_apply"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_filter_latest_min"
        app:layout_constraintWidth_percent="0.6" />

    <EditText
        android:id="@+id/et_filter_latest_min"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/main_button_background"
        android:gravity="center"
        android:hint="45분"
        android:inputType="number"
        android:textSize="13.5sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_last_min_title"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintLeft_toRightOf="@id/tv_last_min_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_last_min_title"
        app:layout_constraintWidth_percent="0.35" />

    <ImageButton
        android:id="@+id/btn_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/theme_color_round_button"
        android:padding="3dp"
        android:src="@drawable/ic_baseline_calendar_month_24"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintLeft_toRightOf="@id/tv_start_date_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_filter_date_title" />

    <ImageButton
        android:id="@+id/btn_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/theme_color_round_button"
        android:padding="3dp"
        android:src="@drawable/ic_baseline_calendar_month_24"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintLeft_toRightOf="@id/tv_end_date_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_start_date" />

    <ImageButton
        android:id="@+id/btn_back_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_baseline_clear_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group_filter_sell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_filter_sell_title">

        <RadioButton
            android:id="@+id/radio_btn_filter_entire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/breaking_color"
            android:padding="3dp"
            android:text="@string/entire"
            android:textSize="11sp" />

        <RadioButton
            android:id="@+id/radio_btn_filter_sold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/breaking_color"
            android:padding="3dp"
            android:text="@string/sold_feed"
            android:textSize="11sp" />

        <RadioButton
            android:id="@+id/radio_btn_filter_unsold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/breaking_color"
            android:padding="3dp"
            android:text="@string/unsold_feed"
            android:textSize="11sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_filter_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/filter_option_title"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btn_back_clear"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_last_min_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/latest_time"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_filter_latest_min_title" />

    <TextView
        android:id="@+id/tv_start_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_date"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_start_date"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_start_date" />

    <TextView
        android:id="@+id/tv_end_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_date"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_end_date"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_end_date" />

    <TextView
        android:id="@+id/tv_filter_sell_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/sell_feed"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_filter_title" />

    <TextView
        android:id="@+id/tv_filter_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/date_range"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group_filter_sell" />

    <TextView
        android:id="@+id/tv_filter_latest_min_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/for_last_min"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_end_date" />

    <TextView
        android:id="@+id/tv_start_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/post_input_background"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/hyphen"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_start_date"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintLeft_toRightOf="@id/btn_start_date"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_start_date"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/tv_end_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/post_input_background"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/hyphen"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_end_date"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintLeft_toRightOf="@id/btn_end_date"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_end_date"
        app:layout_constraintWidth_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>