<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_withdraw"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/sign_up_button_background"
        android:text="@string/do_withdraw"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_input_withdraw"
        app:layout_constraintVertical_bias="0.09"
        app:layout_constraintWidth_percent="0.3" />

    <EditText
        android:id="@+id/et_input_withdraw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_background"
        android:gravity="center"
        android:hint="@string/hint_withdraw"
        android:inputType="number"
        android:maxLength="9"
        android:maxLines="1"
        android:padding="7dp"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_withdraw_title"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintLeft_toRightOf="@id/tv_withdraw_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_withdraw_title"
        app:layout_constraintWidth_percent="0.6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/won"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@id/et_input_withdraw"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintLeft_toRightOf="@id/et_input_withdraw"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_input_withdraw" />

    <TextView
        android:id="@+id/tv_withdraw_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withdraw_amount"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />
</androidx.constraintlayout.widget.ConstraintLayout>