<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <Button
        android:id="@+id/btn_user_type_default"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/sign_up_user_type_selected"
        android:padding="5dp"
        android:text="@string/sign_up_user_type_default_btn"
        android:textColor="@color/sign_up_user_type_text_color"
        android:textSize="16dp"
        app:layout_constraintHeight_percent="0.045"
        app:layout_constraintLeft_toLeftOf="@id/tv_user_type"
        app:layout_constraintTop_toBottomOf="@id/tv_user_type"
        app:layout_constraintWidth_percent="0.17" />

    <Button
        android:id="@+id/btn_user_type_other"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/sign_up_user_type_unselected"
        android:padding="5dp"
        android:text="@string/sign_up_user_type_other_btn"
        android:textColor="@color/sign_up_user_type_text_color"
        android:textSize="16dp"
        app:layout_constraintHeight_percent="0.045"
        app:layout_constraintLeft_toRightOf="@id/btn_user_type_default"
        app:layout_constraintTop_toBottomOf="@id/tv_user_type"
        app:layout_constraintWidth_percent="0.17" />

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/sign_up_button_background"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_user_type_default"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintWidth_percent="0.3" />

    <EditText
        android:id="@+id/et_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/sign_up_input_background"
        android:hint="@string/sign_up_nickname_text"
        android:padding="8dp"
        android:textColorHint="@color/sign_up_input_hint_text_color"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nickname"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/sign_up_input_background"
        android:hint="@string/sign_up_name"
        android:padding="8dp"
        android:textColorHint="@color/sign_up_input_hint_text_color"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintWidth_percent="0.8" />
    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/sign_up_input_background"
        android:hint="@string/sign_up_phone_number_text"
        android:padding="8dp"
        android:textColorHint="@color/sign_up_input_hint_text_color"
        android:textSize="17dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_number"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/et_state_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/sign_up_input_background"
        android:hint="@string/sign_up_state_message_hint"
        android:padding="8dp"
        android:textColorHint="@color/sign_up_input_hint_text_color"
        android:textSize="17dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_state_message"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/sign_up_input_background"
        android:hint="@string/sign_up_email_title"
        android:padding="8dp"
        android:textColorHint="@color/sign_up_input_hint_text_color"
        android:textSize="17dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintWidth_percent="0.8" />

    <ImageButton
        android:id="@+id/img_btn_profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:cropToPadding="true"
        android:scaleType="fitXY"
        android:background="@drawable/ic_default_profile_image"
        app:layout_constraintBottom_toTopOf="@id/et_nickname"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/tv_add_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/sign_up_add_profile_text"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_btn_profile_image" />

    <TextView
        android:id="@+id/tv_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up_nickname_text"
        android:textColor="@color/black"
        android:textSize="19dp"
        app:layout_constraintBottom_toTopOf="@id/et_nickname"
        app:layout_constraintStart_toStartOf="@id/et_nickname"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/sign_up_name"
        android:textColor="@color/black"
        android:textSize="19dp"
        app:layout_constraintBottom_toTopOf="@id/et_name"
        app:layout_constraintStart_toStartOf="@id/et_name"
        app:layout_constraintTop_toBottomOf="@id/tv_add_profile" />
    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up_phone_number_text"
        android:textColor="@color/black"
        android:textSize="19dp"
        app:layout_constraintBottom_toTopOf="@id/et_phone_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@id/et_phone_number"
        app:layout_constraintTop_toBottomOf="@id/et_nickname" />

    <TextView
        android:id="@+id/tv_state_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up_state_message_title"
        android:textColor="@color/black"
        android:textSize="19dp"
        app:layout_constraintBottom_toTopOf="@id/et_state_message"
        app:layout_constraintStart_toStartOf="@id/et_state_message"
        app:layout_constraintTop_toBottomOf="@id/et_email" />

    <TextView
        android:id="@+id/tv_user_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up_user_type_title"
        android:textColor="@color/black"
        android:textSize="19dp"
        app:layout_constraintStart_toStartOf="@id/tv_email"
        app:layout_constraintTop_toBottomOf="@id/et_state_message" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up_email_title"
        android:textColor="@color/black"
        android:textSize="19dp"
        app:layout_constraintBottom_toTopOf="@id/et_email"
        app:layout_constraintStart_toStartOf="@id/et_email"
        app:layout_constraintTop_toBottomOf="@id/et_phone_number" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>